[package]
name = "waybar_athan"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
islam = "2"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }

[patch.crates-io]
islam = { git = "https://github.com/rynidja/islam" }

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
